k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: frknbrbr/dockerized-nest:1cd488bfcdc3201b3c2d7d658cae0620d141801c
          ports:
            - containerPort: 3000
